2015-01-11  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Add support for --console flag.
	Update --no-console to use CheckConsole class.
	(main): Likewise.
	* GuiConsole.java (main): Likewise.

2015-01-09  Andrea Bernardini <andrebask@gmail.com>

	* repl.java: Add --enable-anf and --debug-print-anf options.

2014-12-28  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Update class for 'receive'
	* standard/ImportFromLibrary.java (SRFI97Map): Map srfi-8 to
	an actual classname, rather than BUILTIN.  Needed if environment
	is restricted, as in r7rs libraries.
	* standard/require.java (featureMap): Add 'srfi-8, 'receive,
	and 'srfi-26.

2014-12-22  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Preliminary support for patterns, but only
	if handlePatterns flag is set.
	* standard/Scheme.java (mlambda): New constant static field.

	* lang/BindDecls.java: New helper class for parsing pattern.
	* standard/MatchDef.java: New class for (! ...) declaration syntax.
	* standard/Scheme.java (initScheme): Adding binding for '!'
	* Makefile.am :update accorinly.

	* standard/define.java (scanForm): Complain about define-private
	in interactive module.

2014-12-21  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (handleImport): Avoid undesirable
	canonicalization when calculating currentSource by using new
	Compilation#getSourceAbsPath method.

2014-12-19  Per Bothner  <per@bothner.com>

	* standard/ImportFromLibrary.java (handleImport): Derive current
	source name from ModuleInfo, not Compilation.  Thus we get a null
	name for cases like <eval> or <string>.
	* lang/Eval.java (evalBody): Update pushNewModule call.

2014-12-16  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (applyFunction): Return null
	if func is a LambdaExp.

	* lang/Translator.java (applyFunction) Moved to Compilation.

	* standard/Scheme.java (formatType): Handle MultValuesType.

2014-12-12  Per Bothner  <per@bothner.com>
