@@ -1,3 +1,9 @@
+2015-02-09  Per Bothner  <per@bothner.com>
+
+	* lang/Lambda.java: Add support for future pattern-matching
+	using standard lambda macro - currently disabled.
+	Add warning for conflicting deprecated type specifier syntax.
+
 2015-01-11  Per Bothner  <per@bothner.com>
 
 	* repl.java (processArgs): Add support for --console flag.
